--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules/
-.pnp
+/node_modules
+/.pnp
 .pnp.js
 
 # testing
-coverage/
+/coverage
 
 # next.js
-.next/
-out/
+/.next/
+/out/
 
 # production
-build/
-dist/
+/build
+/dist
 
 # misc
 .DS_Store
@@ -25,10 +25,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-.env.local
-.env.*.local
+# local env files
+.env*.local
+.env
 
 # vercel
 .vercel
