--- a/firebase.json
+++ b/firebase.json
@@ -13,5 +13,18 @@
     "frameworksBackend": {
       "region": "us-central1"
     }
+  },
+  "functions": {
+    "source": ".",
+    "runtime": "nodejs18",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "cleanupPolicy": {
+      "enabled": true,
+      "maxAge": "7d"
+    }
   }
 }
