--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Firebase CLI
         run: npm install -g firebase-tools
       - name: Set cleanup policy
-        run: firebase functions:artifacts:setpolicy --location=us-central1 --maxage=7d
+        run: firebase functions:artifacts:setpolicy --location=us-central1 --max-age=7d
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
