--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -24,14 +24,14 @@ jobs:
       - name: Set up Firebase CLI
         run: npm install -g firebase-tools
       - name: Set cleanup policy
-        run: firebase functions:artifacts:setpolicy --location=us-central1 --max-age=7d
+        run: firebase functions:artifacts:setpolicy --location=us-central1 --max-age=7
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SENDIT_A9CD9 }}
           channelId: live
           projectId: sendit-a9cd9
-          args: --only hosting
+          args: --only hosting --force
         env:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
           NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
