fix: add firebase authentication to workflow

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -23,6 +23,8 @@ jobs:
           NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID }}
       - name: Set up Firebase CLI
         run: npm install -g firebase-tools
+      - name: Login to Firebase
+        run: firebase login:ci --token "${{ secrets.FIREBASE_TOKEN }}"
       - name: Set cleanup policy
         run: firebase functions:config:set functions.cleanup.maxAge=7
       - uses: FirebaseExtended/action-hosting-deploy@v0
